--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,14 +1,13 @@
 body{
-  font-family:Arial, Helvetica, sans-serif
+  font-family:sans-serif, Arial, Helvetica 
 }
 
-.para,
-.small-para {
+.para, .small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
 
-.small-para {
+p.small-para {
   font-size: 14px;
   font-weight: 800;
 }
@@ -17,26 +16,28 @@ body{
   font-size: 22px;
 }
 
-.confirm {
+#confirm-button{
   background: green;
   color: white;
   font-weight: bold;
-} 
+}  
 
-.button {
+.button, .cancel{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
 
-div.text {
+
+.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+.text.child {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
 }
